performance : clean up after testsn stop ForkJoinPool