@@ -21,14 +21,29 @@ import com.openclassrooms.tourguide.service.RewardsService;
 import com.openclassrooms.tourguide.service.TourGuideService;
 import com.openclassrooms.tourguide.user.User;
 
+@Tag("performance")
 public class TestPerformance {
+
+	/*
+	 * --------------------------------------------------------
+	 * A note on performance improvements:
+	 * --------------------------------------------------------
+	 * The number of users generated for the high volume tests can be easily
+	 * adjusted via this line: "int numberOfUsers = 10000;"
+	 *
+	 * --------------------------------------------------------
+	 * These are performance metrics that we are trying to hit:
+	 * --------------------------------------------------------
+	 * highVolumeTrackLocation: 100,000 users within 15 minutes:
+	 * highVolumeGetRewards   : 100,000 users within 20 minutes:
+	 */
 
 	private static Logger logger = LoggerFactory.getLogger(TestPerformance.class);
 	private static GpsUtil gpsUtil;
 	private static RewardsService rewardsService;
 	private static TourGuideService tourGuideService;
 	private StopWatch stopWatch;
-	int numberOfUsers;
+	int numberOfUsers = 100;
 
 	@BeforeAll
 	public static void init() {
@@ -41,7 +56,6 @@ public class TestPerformance {
 	public void setup() {
 		logger.debug("setup beforeEach");
 
-		numberOfUsers = 1000;
 		InternalTestHelper.setInternalUserNumber(numberOfUsers);
 
 		stopWatch = new StopWatch();
@@ -56,28 +70,16 @@ public class TestPerformance {
 		stopWatch.stop();
 	}
 
-	/*
-	 * A note on performance improvements:
-	 * 
-	 * The number of users generated for the high volume tests can be easily
-	 * adjusted via this method:
-	 * 
-	 * InternalTestHelper.setInternalUserNumber(100000);
-	 * 
-	 * 
-	 * These tests can be modified to suit new solutions, just as long as the
-	 * performance metrics at the end of the tests remains consistent.
-	 * 
-	 * These are performance metrics that we are trying to hit:
-	 * 
-	 * highVolumeTrackLocation: 100,000 users within 15 minutes:
-	 * assertTrue(TimeUnit.MINUTES.toSeconds(15) >=
-	 * TimeUnit.MILLISECONDS.toSeconds(stopWatch.getTime()));
-	 *
-	 * highVolumeGetRewards: 100,000 users within 20 minutes:
-	 * assertTrue(TimeUnit.MINUTES.toSeconds(20) >=
-	 * TimeUnit.MILLISECONDS.toSeconds(stopWatch.getTime()));
-	 */
+	@AfterAll
+	public static void cleanup() {
+		logger.debug("cleanup afterAll");
+		if (tourGuideService != null) {
+			tourGuideService.tracker.stopTracking();
+			if (rewardsService instanceof RewardsService rs) {
+				rs.shutdown();
+			}
+		}
+	}
 
 	@DisplayName("Measure how long it takes to track location for a large number of users")
 	@Test
@@ -105,13 +107,14 @@ public class TestPerformance {
 		logger.info("Starting highVolumeGetRewards");
 
 		stopWatch.start();
-		Attraction attraction = gpsUtil.getAttractions().get(0);
+		Attraction attraction = gpsUtil.getAttractions().getFirst();
 		List<User> allUsers = tourGuideService.getAllUsers();
 
-		allUsers.forEach(u ->
+		allUsers.forEach(u -> {
 				u.addToVisitedLocations(
 						new VisitedLocation(u.getUserId(), attraction,
-						new Date())));
+						new Date()));
+		});
 
 		// act
 		rewardsService.calculateRewardsForMultipleUsers(allUsers);
